minijinja/tests/snapshots/test_templates__vm@err_strict_undefined_format.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ \"%s-%s\"|format(1, undefined_value) }}"
info:
  $settings:
    undefined: strict
input_file: minijinja/tests/inputs/err_strict_undefined_format.txt
---
!!!ERROR!!!

Error {
    kind: UndefinedError,
    detail: "`undefined_value` is undefined",
    name: "err_strict_undefined_format.txt",
    line: 1,
}

undefined value: `undefined_value` is undefined (in err_strict_undefined_format.txt:1)
----------------------- err_strict_undefined_format.txt -----------------------
   1 > {{ "%s-%s"|format(1, undefined_value) }}
     i            ^^^^^^^^^^^^^^^^^^^^^^^^^^ undefined value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
