minijinja/tests/snapshots/test_templates__vm@err_strict_undefined_int_default.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ undefined_value|int(7) }}"
info:
  $settings:
    undefined: strict
input_file: minijinja/tests/inputs/err_strict_undefined_int_default.txt
---
!!!ERROR!!!

Error {
    kind: UndefinedError,
    detail: "`undefined_value` is undefined",
    name: "err_strict_undefined_int_default.txt",
    line: 1,
}

undefined value: `undefined_value` is undefined (in err_strict_undefined_int_default.txt:1)
-------------------- err_strict_undefined_int_default.txt ---------------------
   1 > {{ undefined_value|int(7) }}
     i                    ^^^^^^ undefined value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
