minijinja/tests/snapshots/test_templates__vm@err_undefined_item.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ seq[42][23] }}"
info:
  seq:
    - 1
    - 2
    - 3
input_file: minijinja/tests/inputs/err_undefined_item.txt
---
!!!ERROR!!!

Error {
    kind: UndefinedError,
    detail: "`seq[42]` is undefined",
    name: "err_undefined_item.txt",
    line: 1,
}

undefined value: `seq[42]` is undefined (in err_undefined_item.txt:1)
--------------------------- err_undefined_item.txt ----------------------------
   1 > {{ seq[42][23] }}
     i       ^^^^^^^^ undefined value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    seq: [
        1,
        2,
        3,
    ],
}
-------------------------------------------------------------------------------
