minijinja/tests/snapshots/test_templates__vm@filter_block.html.snap
---
source: minijinja/tests/test_templates.rs
expression: "&rendered"
input_file: minijinja/tests/inputs/filter_block.html

---
<p>foo &lt; bar</p>

