minijinja/tests/snapshots/test_templates__vm@filter_block.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% filter upper %}{{ egg }}{% endfilter %}"
info:
  ctx:
    egg: Humpty Dumpty sat on a wall
input_file: minijinja/tests/inputs/filter_block.txt
---
HUMPTY DUMPTY SAT ON A WALL

